Began work on gource cust. page. Finished frontend for gallery, still need to do requests.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,7 +14,7 @@
       @apply font-mono
     }
     p {
-      @apply text-gource-blue1;
+      @apply text-black;
       @apply font-mono
     }
   }
