--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -27,6 +27,12 @@
     .margin {
       @apply m-2
     }
+    .form-input {
+      @apply appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white focus:border-gray-500
+    }
+    .form-label {
+      @apply block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2
+    }
   }
   
   @layer utilities {
